--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -110,7 +110,7 @@ Nimmo-Smith]{Eleftherios~Garyfallidis\,$^{1,2,*}$, Matthew~Brett\,$^{3}$,
   \,$^{5}$Stanford University, Stanford, CA, USA\\
   \,$^{6}$MRC Cognition and Brain Sciences Unit, Cambridge, UK\\
   \,$^{7}$Stellenbosch University, Stellenbosch, South Africa\\
-  \,$^{8}$http://dipy.org/developers.html
+  \,$^{8}$\texttt{http://dipy.org/developers.html}
   }
 
 \history{}
@@ -470,21 +470,23 @@ Here the response function is given as a ratio ...
 \subsection{Deterministic}
 
 \subsubsection{EuDX}
-Euler Delta Crossings (EuDX)~\citep{Garyfallidis_thesis} is the first tracking method that was implemented in Dipy. We created an algorithm that has many similarities with the classical deterministic methods~\citep{Mori1999, conturo-lori-etal:99, basser-pajevic-etal:00} and with more recent ones as those described in Descoteaux et al.~\citep{descoteaux-deriche-etal:09} and Yeh et al.~\citep{yeh-etal:10}. Our concentration was to create a simple deterministic algorithm which can be used with very different families of reconstruction models, work well in crossing areas and be efficient so that it can be used for quick quality inspection. EuDX is applied usually in native space image coordinates and it assumes that the voxel dimensions are equal in all three dimensions. If the provided data do not have isotropic voxel size then a reslicing preprocessing step to isotropic is required.
+Euler Delta Crossings (EuDX)~\citep{Garyfallidis_thesis} is the first tracking method that was implemented in Dipy. We created an algorithm that has many similarities with the classical deterministic methods~\citep{Mori1999, conturo-lori-etal:99, basser-pajevic-etal:00} and with more recent ones as those described in Descoteaux et al.~\citep{descoteaux-deriche-etal:09} and Yeh et al.~\citep{yeh-etal:10}. Our concentration was to create a simple deterministic algorithm which can be used with very different families of reconstruction models, work well in crossing areas and be efficient so that it can be used to quickly inspect the reconstruction results. EuDX is applied usually in native space image coordinates and it assumes that the voxel dimensions are equal in all three dimensions. If the provided data do not have isotropic voxel size then a reslicing preprocessing step to isotropic is required.
 
-In order to create tracks we need to provide initially one or more seed points $s$. These can be chosen randomly or we can specify them explicitly. However, these seed points need to be constrained by the volume's dimensions. Every seed point $\mathbf{p}_{0}$ becomes the starting point for the track propagation. For the integration we solve
+In order to create streamlines we need to provide initially one or more seed points $s$. These can be chosen randomly or we can specify them explicitly. However, these seed points need to be constrained by the volume's dimensions. Every seed point $\mathbf{p}_{0}$ becomes the starting point for the track propagation. For the integration we solve
 for $\mathbf{p}_{t}=\mathbf{p}_{0}+\int_{0}^{t}\mathbf{v}(\mathbf{p}(\mathbf{s}))d\mathbf{s}$ and we perform the integration numerically using Euler's method
 \begin{equation}
 \mathbf{p}_{n+1}=\mathbf{p}_{n}+\mathbf{v}(\mathbf{p}_{n})\Delta s\label{eq:euler}
 \end{equation}
-\noindent where $\Delta s$ is the propagation step size which should be at least smaller than the voxel size and $\mathbf{v}$ is the propagation direction.
+\noindent where $\Delta s$ is the propagation step size which should be at least smaller than the voxel size and $\mathbf{v}$ is the propagation direction. Furthermore, EuDX uses trilinear interpolation for the calculation the next direction integrating directional information from the surrounding voxels.
+
+The first parameter of EuDX can be an array of dimensions $X\times Y\times Z$ like FA or $X\times Y\times Z \times W$ like the ODF, or quantitative anisotropy (QA)~\citep{yeh-etal:10}. These arrays can be used for stopping the propagation if the value in the current voxel is lower than \texttt{a\_low}. For efficiency, the peak directions are discretized on a unit sphere. For this purpose, the second parameter is another array of dimensions $X\times Y\times Z$ or $X\times Y\times Z\times W$ but this time these are the indices of the directions approximated on the sphere. An example is given here for tensor based streamlines:
 \begin{python}
 from dipy.tracking.eudx import EuDX
-eu = EuDX(FA, peak_indices,
-          odf_vertices = sphere.vertices,
-          a_low=0.2)
+eu = EuDX(a=FA, ind=peak_indices, seeds=start_rois,
+          sphere=sphere, a_low=0.2)
 tensor_streamlines = [line for line in eu]
 \end{python}
+The input parameter \texttt{seeds} can be given as an integer and this will generate random seeds in the entire volume or it can be given as $N\times 3$ array of seed points. The instance of EuDX returns back an iterator.
 
 \subsection{Probabilistic}
 
